add twitter card and open graph metadata

--- a/index.html
+++ b/index.html
@@ -12,6 +12,44 @@
     <link rel="stylesheet" href="./styles/index.css" />
 
     <title>Frontend Mentor | Interactive rating component</title>
+
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://interactive-rating-component-angeleraser.vercel.app/"
+    />
+    <meta
+      property="og:title"
+      content="Frontend Mentor | Interactive rating component"
+    />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/dixrgy8ki/image/upload/c_scale,h_630,w_1200/v1672683197/portfolio/projects/interactive-rating-component_dxiadn.png"
+    />
+    <meta
+      property="og:description"
+      content="Interactive rating component challenge from Frontendmentor."
+    />
+    <meta
+      property="og:site_name"
+      content="Frontend Mentor | Interactive rating component"
+    />
+    <meta property="og:locale" content="en_US" />
+
+    <meta
+      name="twitter:card"
+      content="Interactive rating component challenge from Frontendmentor."
+    />
+    <meta name="twitter:site" content="@angeleraser" />
+    <meta name="twitter:creator" content="@angeleraser" />
+    <meta
+      name="twitter:url"
+      content="https://interactive-rating-component-angeleraser.vercel.app/"
+    />
+    <meta
+      name="twitter:title"
+      content="Frontend Mentor | Interactive rating component"
+    />
   </head>
   <body>
     <div id="app">
@@ -43,7 +81,10 @@
         <footer class="rating-card-actions"></footer>
       </article>
 
-      <article id="thank-you-card" class="rating-card thank-you-card center-text">
+      <article
+        id="thank-you-card"
+        class="rating-card thank-you-card center-text"
+      >
         <header class="rating-card-header">
           <div class="thank-you-image">
             <img
