--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
   <body>
     <div id="app">
       <article id="rating-card" class="rating-card">
-        <header class="rating-card-header">
+        <div class="rating-card-header">
           <div class="icon-star">
             <img src="./images/icon-star.svg" alt="Star icon" />
           </div>
-        </header>
-        <main class="rating-card-body">
+        </div>
+        <div class="rating-card-body">
           <h1 class="rating-card-title">How did we do?</h1>
 
           <p class="rating-card-description">
@@ -77,7 +77,7 @@
             </div>
             <button class="submit-rating-btn">Submit</button>
           </div>
-        </main>
+        </div>
         <footer class="rating-card-actions"></footer>
       </article>
 
@@ -85,15 +85,15 @@
         id="thank-you-card"
         class="rating-card thank-you-card center-text"
       >
-        <header class="rating-card-header">
+        <div class="rating-card-header">
           <div class="thank-you-image">
             <img
               src="./images/illustration-thank-you.svg"
               alt="Thank you illustration"
             />
           </div>
-        </header>
-        <main class="rating-card-body">
+        </div>
+        <div class="rating-card-body">
           <div class="rating-card-selection">
             You selected out <span class="selected-rate"></span> of 5
           </div>
@@ -104,7 +104,7 @@
             We appreciate you taking the time to give a rating. If you ever need
             more support, don’t hesitate to get in touch!
           </p>
-        </main>
+        </div>
       </article>
     </div>
 
